Make basic alignment to log in and sign up page and fix email validation

--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -87,7 +87,8 @@ p.login-signup  {
 /**************
      ALERT
 ***************/
-.alert  {
+.alert,
+.notice  {
   margin-top: 80px;
   margin-bottom: 0;
   text-align: center;
